Bug 1228455 - [css-grid] Update the 'used flex fraction' for indefinite sizes to clamp flex factors less than 1 before dividing the base size (due to CSS Grid spec change). r=dholbert

CSS Grid spec change:
https://hg.csswg.org/drafts/rev/42427088d71f